src/test/resources/semantic/custom/reject/duplicateVariableDeclDifferentTypes.ul
void main() {
}

void foo() {
    float var;
    int var;
}
